Fix deprecation due to wrong java version on my end